# Trap-States-MCTS

./: CMakeLists.txt  Makefile  README.md  evaluate.cpp  main.cpp  misc.cpp  montecarlotreenode.h  position.cpp  similairty.cpp  similarity.h  uctsearch.cpp  uctsearch.h
source/: montecarlotreenode.cpp  movegen.cpp  movegen.h  position.h  similairty.cpp  similarity.h  similarity_test.cpp  similarity_test.h  uci.cpp  uctsearch.cpp
test/: child_test_set.in  test_set.in  trap_test.cpp  trap_test.h
